# wasi-graphviz

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  NOTICE  README.md  pixi.toml  pyproject.toml
.github/workflows/: build-wasm.yml  check-graphviz-release.yml  release.yml  test.yml
docs/dev/v0.1.0a1/: PLAN.md  STATUS.md
native/: echo.c  main.c  wasi_stubs.h  wasm32-wasi-toolchain.cmake  zig-ar  zig-c++  zig-cc  zig-ranlib
native/vcpkg-triplets/: wasm32-wasi.cmake
notebooks/: quickstart.ipynb
scripts/: build_wasm.py  prepare_graphviz_wasi.py  spike_pywasm_echo.py  spike_pywasm_graphviz.py  spike_wasmtime_echo.py  spike_wasmtime_graphviz.py
src/wasi_graphviz/: __init__.py  _constants.py  _exceptions.py  _memory.py
src/wasi_graphviz/assets/: graphviz.wasm
src/wasi_graphviz/backends/: __init__.py  pywasm_backend.py  wasmtime_backend.py
tests/: test_backends_agree.py  test_benchmarks.py  test_formats.py  test_large_graph.py  test_packaging.py  test_pywasm_backend.py  test_wasmtime_backend.py
