[project]
name = "wasi-graphviz"
version = "0.1.0"
description = "Run Graphviz from Python via WebAssembly — no native binary required"
readme = "README.md"
license = "EPL-2.0"
license-files = ["LICENSE", "NOTICE", "src/wasi_graphviz/assets/GRAPHVIZ_LICENSE"]
authors = [
    { name = "Pablo Rodriguez Mier", email = "pablo.rodriguez.mier@gmail.com" }
]
keywords = ["graphviz", "wasm", "wasi", "webassembly", "dot", "svg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pywasm = ["pywasm>=2.2.2"]
wasmtime = ["wasmtime>=44.0.0"]
all = ["pywasm>=2.2.2", "wasmtime>=44.0.0"]
test = ["pytest", "pytest-benchmark>=5", "ruff"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wasi-graphviz = { path = ".", editable = true }

[tool.pixi.tasks]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5",
    "ruff>=0.15.11",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
markers = [
    "perf: performance benchmarks (skipped by default; run with `pytest -m perf --benchmark-only`)",
]
addopts = "-m 'not perf'"
